# discord-cftools-wfr

./: .env.sample  .gitignore  Dockerfile  README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: deploy.yaml  python-app.yml  test_build.yml
migrations/models/: 0_20230212191858_init.py  1_20230212215704_update.py  2_20230212234945_update.py  3_20230218080300_update.py
src/cftools/: cftools_api.py  decorators.py  interface.py  models.py
src/database/: connector.py  migrate.py  models.py
src/discord/: app.py  controllers.py  embdes.py  interface.py  models.py  views.py
src/discord/cogs/slash_command/: grants.py  leaderboard.py  stats.py
src/discord/controllers_logic/: board.py
tests/: test_cftools_api.py
